Added project directories.
Signed-off-by: Dan Tumaykin <d.tumaykin@gmail.com>

--- a/LLCompiler/LLCompiler.csproj
+++ b/LLCompiler/LLCompiler.csproj
@@ -40,8 +40,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Compiler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="CodeGenerator\" />
+    <Folder Include="Lexer\" />
+    <Folder Include="Parser\" />
+    <Folder Include="SyntaxAnalyzer\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
