--- a/LLCompiler/LLCompiler.csproj
+++ b/LLCompiler/LLCompiler.csproj
@@ -46,7 +46,7 @@
     <Folder Include="CodeGenerator\" />
     <Folder Include="Lexer\" />
     <Folder Include="Parser\" />
-    <Folder Include="SyntaxAnalyzer\" />
+    <Folder Include="SemanticAnalyzer\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
