--- a/LLCompiler/LLCompiler.csproj
+++ b/LLCompiler/LLCompiler.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Lexer\Lexer.cs" />
+    <Compile Include="Lexer\LexerException.cs" />
     <Compile Include="Lexer\Token.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
